--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,15 @@
 # TEFingerprint
 # A Python 3 library and command line tool for transposon fingerprinting
 
+v0.3.1
+- alpha
+- new features
+    - maximum count proportion # 115
+        - added 'max_count_proportion' field to output (was already used for determining colour)
+        - renamed '--no-colour' switch to '--no-max-count-proportion'
+- changes
+    - package version now stored in single location 'version.py'
+
 v0.3.0
 - alpha
 - new features
