--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,20 @@
 # TEFingerprint
 # A Python 3 library and command line tool for transposon fingerprinting
 
+v0.3.2
+- alpha
+- changes
+    - rename cluster classes and methods IDBCAN and SIDBCAN to DBICAN and SDBICAN respectively
+    - minor changes for compatibility with python 3.4
+    - added Makefile
+- bug fixes
+    - simplify and fix travis CI
+- documentation
+    - add MIT licence
+    - improve method docs
+    - add graphics to method docs #74
+    - document requirements
+
 v0.3.1
 - alpha
 - new features
